docs/api/qiskit/0.40/qiskit.algorithms.gradients.ReverseEstimatorGradient.md
---
title: ReverseEstimatorGradient
description: API reference for qiskit.algorithms.gradients.ReverseEstimatorGradient
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.algorithms.gradients.ReverseEstimatorGradient
---

# ReverseEstimatorGradient[¶](#reverseestimatorgradient "Permalink to this headline")

<span id="qiskit.algorithms.gradients.ReverseEstimatorGradient" />

`ReverseEstimatorGradient(derivative_type=DerivativeType.REAL)`

Bases: [`qiskit.algorithms.gradients.base_estimator_gradient.BaseEstimatorGradient`](qiskit.algorithms.gradients.BaseEstimatorGradient "qiskit.algorithms.gradients.base_estimator_gradient.BaseEstimatorGradient")

Estimator gradients with the classically efficient reverse mode.

<Admonition title="Note" type="note">
  This gradient implementation is based on statevector manipulations and scales exponentially with the number of qubits. However, for small system sizes it can be very fast compared to circuit-based gradients.
</Admonition>

This class implements the calculation of the expectation gradient as described in \[1]. By keeping track of two statevectors and iteratively sweeping through each parameterized gate, this method scales only linearly with the number of parameters.

**References:**

> **\[1]: Jones, T. and Gacon, J. “Efficient calculation of gradients in classical simulations**
>
> of variational quantum algorithms” (2020). [arXiv:2009.02823](https://arxiv.org/abs/2009.02823).

**Parameters**

**derivative\_type** ([`DerivativeType`](qiskit.algorithms.gradients.DerivativeType "qiskit.algorithms.gradients.utils.DerivativeType")) – Defines whether the real, imaginary or real plus imaginary part of the gradient is returned.

## Methods

### run

<span id="qiskit.algorithms.gradients.ReverseEstimatorGradient.run" />

`ReverseEstimatorGradient.run(circuits, observables, parameter_values, parameters=None, **options)`

Run the job of the estimator gradient on the given circuits.

**Parameters**

*   **circuits** – The list of quantum circuits to compute the gradients.
*   **observables** – The list of observables.
*   **parameter\_values** – The list of parameter values to be bound to the circuit.
*   **parameters** – The sequence of parameters to calculate only the gradients of the specified parameters. Each sequence of parameters corresponds to a circuit in `circuits`. Defaults to None, which means that the gradients of all parameters in each circuit are calculated.
*   **options** – Primitive backend runtime options used for circuit execution. The order of priority is: options in `run` method > gradient’s default options > primitive’s default setting. Higher priority setting overrides lower priority setting

**Returns**

The job object of the gradients of the expectation values. The i-th result corresponds to `circuits[i]` evaluated with parameters bound as `parameter_values[i]`. The j-th element of the i-th result corresponds to the gradient of the i-th circuit with respect to the j-th parameter.

**Raises**

**ValueError** – Invalid arguments are given.

### update\_default\_options

<span id="qiskit.algorithms.gradients.ReverseEstimatorGradient.update_default_options" />

`ReverseEstimatorGradient.update_default_options(**options)`

Update the gradient’s default options setting.

**Parameters**

**\*\*options** – The fields to update the default options.

## Attributes

<span id="qiskit.algorithms.gradients.ReverseEstimatorGradient.SUPPORTED_GATES" />

### SUPPORTED\_GATES

`= ['rx', 'ry', 'rz', 'cp', 'crx', 'cry', 'crz']`

<span id="qiskit.algorithms.gradients.ReverseEstimatorGradient.derivative_type" />

### derivative\_type

Return the derivative type (real, imaginary or complex).

**Return type**

[`DerivativeType`](qiskit.algorithms.gradients.DerivativeType "qiskit.algorithms.gradients.utils.DerivativeType")

**Returns**

The derivative type.

<span id="qiskit.algorithms.gradients.ReverseEstimatorGradient.options" />

### options

Return the union of estimator options setting and gradient default options, where, if the same field is set in both, the gradient’s default options override the primitive’s default setting.

**Return type**

[`Options`](qiskit.providers.Options "qiskit.providers.options.Options")

**Returns**

The gradient default + estimator options.

